# notion-x-google-calendar

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
src/google_calendar_module/: google_calendar_client.py
src/notion_module/: config.py  notion_client.py  utils.py
src/notion_x_google_calendar/: __main__.py  app.py  factory.py  models.py  synchronizer.py
